# girih-cpp

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/kernels/: stencils.hpp
src/utilities/affinity/: affinity.cpp  affinity.hpp
